<resources>
    <string name="app_name">Entregable1</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_google_text">Acceso con Google</string>
    <string name="login_button_register_text">Pulsa aquí para registrarte</string>
    <string name="login_mail_error_1">El correo electrónico no puede estar vacío</string>
    <string name="login_mail_error_2">La contraseña no puede estar vacía</string>
    <string name="login_mail_access_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">Aún no has validado tu cuenta. ¿Quieres que te enviemos un correo de verificación?</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_verified_mail_error_sent">Hemos enviado un correo de verificación a tu dirección</string>
    <string name="login_verified_mail_error_no_sent">No se ha podido enviar un correo de verificación a tu cuenta</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debe actualizar GooglePlay Services antes de continuar</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">135025013307-6sc0vkj4o1ksp2933a7o6anrjr0vtpg9.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Introducir de nuevo la contraseña</string>
    <string name="login_button_signup_text">Registrar usuario</string>
    <string name="signup_error_user">La dirección de correo no es válida</string>
    <string name="signup_error_pass">La contraseña no es válida</string>
    <string name="signup_error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="signup_created">El usuario se ha registrado correctamente</string>
    <string name="signup_created_error">Se ha producido un error al registrar el nuevo usuario</string>
    <string name="take_picture">Tomar Foto</string>
    <string name="take_picture_camera_rationale">Se necesita permiso de la cámara para tomar fotos.</string>
    <string name="take_picture_camera_rationale_ok">OK</string>
    <string name="take_picture_write_external_rationale">Se necesita permiso de almacenamiento para guardar las fotos.</string>
    <string name="camera_not_granted">Permiso de la cámara denegado.</string>
    <string name="storage_not_granted">Permiso de almacenamiento denegado.</string>
    <string name="error_crear_archivo">Error al crear el archivo para la foto.</string>
    <string name="upload_success">Imagen subida con éxito.</string>
    <string name="upload_failed">Error al subir la imagen.</string>
    <string name="camera_permission_required">Se requiere permiso de la cámara para continuar.</string>
    <string name="storage_permission_required">Se requiere permiso de almacenamiento para guardar la foto.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_rationale">Necesitamos tu localización para esta funcionalidad</string>
    <string name="location_rationale_ok">Permitir</string>
    <string name="location_cancel">Este permiso es necesario para la aplicación</string>
    <string name="open_weather_map_api_key">be61475ecbee33779ac3cda7a7aa282b</string>
</resources>