<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".AuthActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:src="@drawable/monos"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/login_main_layout">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:boxBackgroundMode="outline">

                <AutoCompleteTextView
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_et_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:boxBackgroundMode="outline">

                <AutoCompleteTextView
                    android:id="@+id/login_pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_et_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/blue_button"
                android:text="@string/login_button_mail_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/common_full_open_on_phone_small"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/red_google"
                android:text="@string/login_button_google_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:drawableStart="@drawable/common_google_signin_btn_icon_light"
                android:drawablePadding="8dp" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/login_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_register_text"
                android:textAllCaps="true"
                android:textColor="@color/blue_app"
                android:backgroundTint="@color/transparent"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
